/* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
   Module Name          : builder.model.ComputerEnum
   Module Description   :

   Date Created      : 2018年1月16日
   Original Author   : 015336
   ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
package builder.model;

/**
 * @author 015336
 */
public class ComputerEnum
{
	public static final String DESKTOP = "DeskTop";
	public static final String LAPTOP = "LapTop";
}
