/* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
   Module Name          : builder.model.Laptop
   Module Description   :

   Date Created      : 2018¦~1¤ë16¤é
   Original Author   : 015336
   ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
package builder.model;

/**
 * @author 015336
 */
public class Laptop extends Computer
{

}
